# mgf

./: .directory  .gitignore  CMakeLists.txt  README.md  TODO.txt  TransparentLoaderTmp.cpp  gl_test.h  log_mgf.txt  main.cpp  makefile  mgf.cbp  mgf.depend  mgf.layout  save.sh
libs/: libSDL2_gfx-1.0.so.0.0.0
libs/mgf/: mgf.h  mgf_camera.cpp  mgf_camera.h  mgf_extra.cpp  mgf_extra.h  mgf_global.h  mgf_init.cpp  mgf_init.h  mgf_input.cpp  mgf_input.h  mgf_model.cpp  mgf_model.h  mgf_object.cpp  mgf_object.h  mgf_shader.cpp  mgf_shader.h
libs/mol/: mol.hpp  mol.inl
libs/mvm/: mvm.hpp
res/images/elemente/: artillery.blend  back.blend1  damage.blend  fullscreen.blend  health.blend  health.blend1  hitchance.blend  infantry.blend  (+8 more)
res/models/: DeLorean_Final.mtl  cube.blend  cube.mtl  scene.3ds  scene.blend  scene.blend1  scene.dae  scene.fbx  scene.ply  scene.x3d  test.m3dm  wolf.blend  wolf.blend1  wolf_1.mtl
res/shader/: .directory  fragment_shader.glsl  geometry_shader.glsl  tesselationcontrol_shader.glsl  tesselationevaluation_shader.glsl  vertex_shader.glsl
src/: .directory  Camera.cpp  Camera.h  Include.h  Loader.cpp  Shader.h  Window.cpp  Window.h  mgf.cpp  mgf.h  mgf_camera.cpp  mgf_camera.h  mgf_data.cpp  mgf_data.h  mgf_include.h  mgf_info.cpp  mgf_info.h  mgf_init.cpp  mgf_init.h  mgf_input.cpp  mgf_input.h  mgf_loader.cpp  mgf_loader.h  mgf_model.cpp  mgf_model.h  mgf_node.cpp  mgf_node.h  mgf_object.h  mgf_render.cpp  mgf_render.h  mgf_scene.cpp  mgf_scene.h  mgf_shader.cpp  mgf_shader.h  mgf_window.cpp  mgf_window.h
src/camera/: BaseCamera.cpp  BaseCamera.h  CameraFPSEuler.cpp  CameraFPSEuler.h  CameraFPSQuat.cpp  CameraFPSQuat.h  CameraFlightQuat.cpp  CameraFlightQuat.h  CameraTopDown.cpp  CameraTopDown.h  ICamera.h
src/collision/: MouseRay.cpp  MouseRay.h  RayPlane.cpp  RayPlane.h
src/data/: Data.cpp  Data.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
src/helper/: Helper.cpp  Helper.h
src/input/: BaseInput.cpp  BaseInput.h  IInput.h  InputFPS.cpp  InputFPS.h  InputTopDown.cpp  InputTopDown.h
src/lib/: mlog.h
src/overlay/: Button.cpp  Button.h  IOverlayElement.h  Label.cpp  Label.h  Moveable.cpp  Moveable.h  Overlay.cpp  Overlay.h
src/renderer/: LightManager.cpp  LightManager.h  Renderer.cpp  Renderer.h
src/scene/: ILoader.h  LODNode.cpp  LODNode.h  LightNode.cpp  LightNode.h  Loader.cpp  Loader.h  LoaderLOD.cpp  LoaderLOD.h  LoaderTransparent.cpp  LoaderTransparent.h  MeshNode.cpp  MeshNode.h  MeshTransparentNode.cpp  MeshTransparentNode.h  Node.cpp  Node.h  OverlayNode.cpp  OverlayNode.h  Positionable.cpp  Positionable.h  Renderable.h  SimpleLoader.cpp  SimpleLoader.h
src/util/: Camera.cpp  Camera.h  Input.cpp  Input.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h
(+27 files in other folders)
